edicted my html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <nav>
-      <button id="feedBtn">Feed</button>
-      <button id="decideBtn">Decide</button>
-      <button id="savedBtn">Saved</button>
+      <button class="nav-btn active" data-page="feed">Feed</button>
+      <button class="nav-btn" data-page="decide">Decide</button>
+      <button class="nav-btn" data-page="saved">Saved</button>
     </nav>
 
     <main>
